--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <link rel="stylesheet" href="../css/common.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="stylesheet" href="../member/css/member.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -16,21 +16,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <header>
-            <div class="top">
-                <div>
-                    <a href="./member/login.html">로그인</a>
-                    <a href="#">회원가입</a>
-                    <a href="#">마이페이지</a>
-                    <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-                </div>
-            </div>
-            <div class="logo">
-                <div>
-                    <a href="../index.html"><img src="../images/header_logo.png" alt="로고"/></a>
-                </div>
-            </div>
-        </header>
+        <th:block th:include="/member/fragment/_header.html"/>
         <main id="member">
             <div class="login">
                 <nav>
@@ -54,7 +40,7 @@
                         <label><input type="checkbox" name="auto"/>자동 로그인</label>
 						<a href="#">아이디찾기</a>
 						<a href="#">비밀번호찾기</a>
-						<a href="#">회원가입</a>
+						<a th:href="@{/member/join}">회원가입</a>
 					</span>
 
                     <a href="#" class="banner"><img src="../images/member_login_banner.jpg" alt="1만원 할인 쿠폰 받기"></a>
@@ -63,31 +49,7 @@
 				<img src="../images/member_certifi_logo.gif" alt="banner">
             </div>
         </main>        
-        <footer>
-            <ul>
-                <li><a href="#">회사소개</a></li>
-                <li><a href="#">서비스이용약관</a></li>
-                <li><a href="#">개인정보처리방침</a></li>
-                <li><a href="#">전자금융거래약관</a></li>
-            </ul>
-            <div>
-                <p><img src="../images/footer_logo.png" alt="로고"></p>
-                <p>
-                  <strong>(주)KMARKET</strong><br />
-                  부산시 강남구 테헤란로 152 (역삼동 강남파이낸스센터)<br />
-                  대표이사 : 홍길동<br />
-                  사업자등록번호 : 220-81-83676 사업자정보확인<br />
-                  통신판매업신고 : 강남 10630호 Fax : 02-589-8842
-                </p>
-                <p>
-                  <strong>고객센터</strong><br />
-                  Tel : 1234-5678 (평일 09:00~18:00)<br />
-                  스마일클럽/SVIP 전용 : 1522-5700 (365일 09:00~18:00)<br />
-                  경기도 부천시 원미구 부일로 223(상동) 투나빌딩 6층<br />
-                  Fax : 051-123-4567 | Mail : kmarket@kmarket.co.kr<br />
-                </p>
-            </div>              
-        </footer>
+        <th:block th:include="/member/fragment/_footer.html"/>
     </div>    
 </body>
 </html>
