--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -16,44 +16,30 @@
 </head>
 <body>
     <div id="wrapper">
-        <header>
-            <div class="top">
-                <div>
-                    <a href="./member/login.html">로그인</a>
-                    <a href="#">회원가입</a>
-                    <a href="#">마이페이지</a>
-                    <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-                </div>
-            </div>
-            <div class="logo">
-                <div>
-                    <a href="../index.html"><img src="../images/header_logo.png" alt="로고"/></a>
-                </div>
-            </div>
-        </header>
+        <th:block th:include="/member/fragment/_header.html"/>
         <main id="member">
             <div class="register">
                 <nav>
                     <h1>일반 회원가입</h1>
                 </nav>
-				<form action="#" method="POST">
+				<form th:action="@{/member/register}" method="POST">
 					<section>
 						<table>
 							<caption>필수 정보입력</caption>
 							<tr>
 								<th><span class="essential">*</span>아이디</th>
-								<td><input type="text" name="km_uid" placeholder="아이디를 입력"
+								<td><input type="text" name="uid" placeholder="아이디를 입력"
 									required /> <span class="msgId">영문, 숫자로 4~12자까지 설정해 주세요.</span></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호</th>
-								<td><input type="password" name="km_pass" placeholder="비밀번호를 입력"
+								<td><input type="password" name="pass1" placeholder="비밀번호를 입력"
 									required /> <span class="msgPass">영문, 숫자, 특수문자를 조합하여
 										8~12자까지 설정해 주세요.</span></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호확인</th>
-								<td><input type="password" name="km_pass" placeholder="비밀번호를 확인"
+								<td><input type="password" name="pass2" placeholder="비밀번호를 확인"
 									required /> <span class="msgPass">비밀번호 재입력</span></td>
 							</tr>
 						</table>
@@ -63,23 +49,23 @@
 							<caption>기본 정보입력</caption>
 							<tr>
 								<th><span class="essential">*</span>이름</th>
-								<td><input type="text" name="km_name" placeholder="이름을 입력"
+								<td><input type="text" name="name" placeholder="이름을 입력"
 									required /></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>성별</th>
-								<td><label><input type="radio" name="km_gender"
+								<td><label><input type="radio" name="gender"
 										value="1" checked>&nbsp;남</label> <label><input
 										type="radio" name="gender" value="2">&nbsp;여</label></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>EMAIL</th>
-								<td><input type="email" name="km_email" placeholder="이메일 입력"
+								<td><input type="email" name="email" placeholder="이메일 입력"
 									required /></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>휴대폰</th>
-								<td><input type="text" name="km_hp" maxlength="13"
+								<td><input type="text" name="hp" maxlength="13"
 									placeholder="휴대폰번호 입력" required /> <span class="msgHp"> -
 										포함 13자리를 입력하세요.</span></td>
 							</tr>
@@ -87,15 +73,15 @@
 								<th>주소</th>
 								<td>
 									<div>
-										<input type="text" name="km_zip" id="zip" placeholder="우편번호 입력 클릭"
+										<input type="text" name="zip" id="zip" placeholder="우편번호 입력 클릭"
 											readonly />
 									</div>
 									<div>
-										<input type="text" name="km_addr1" id="addr1" size="50"
+										<input type="text" name="addr1" id="addr1" size="50"
 											placeholder="주소를 검색하세요." readonly />
 									</div>
 									<div>
-										<input type="text" name="km_addr2" id="addr2" size="50"
+										<input type="text" name="addr2" id="addr2" size="50"
 											placeholder="상세주소를 입력하세요." />
 									</div>
 								</td>
@@ -109,31 +95,7 @@
 				</form>
             </div>
         </main>        
-        <footer>
-            <ul>
-                <li><a href="#">회사소개</a></li>
-                <li><a href="#">서비스이용약관</a></li>
-                <li><a href="#">개인정보처리방침</a></li>
-                <li><a href="#">전자금융거래약관</a></li>
-            </ul>
-            <div>
-                <p><img src="../images/footer_logo.png" alt="로고"></p>
-                <p>
-                  <strong>(주)KMARKET</strong><br />
-                  부산시 강남구 테헤란로 152 (역삼동 강남파이낸스센터)<br />
-                  대표이사 : 홍길동<br />
-                  사업자등록번호 : 220-81-83676 사업자정보확인<br />
-                  통신판매업신고 : 강남 10630호 Fax : 02-589-8842
-                </p>
-                <p>
-                  <strong>고객센터</strong><br />
-                  Tel : 1234-5678 (평일 09:00~18:00)<br />
-                  스마일클럽/SVIP 전용 : 1522-5700 (365일 09:00~18:00)<br />
-                  경기도 부천시 원미구 부일로 223(상동) 투나빌딩 6층<br />
-                  Fax : 051-123-4567 | Mail : kmarket@kmarket.co.kr<br />
-                </p>
-            </div>              
-        </footer>
+       <th:block th:include="/member/fragment/_footer.html"/> 
     </div>    
 </body>
 </html>
