--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -529,7 +529,7 @@
 	background-position: -48px -74px;
 }
 #product > .view > .info > .summary .count > .increase:hover {background-position: -72px -74px;}
-#product > .view > .info > .summary .count > input[name=num] {
+#product > .view > .info > .summary .count > input[name=count] {
 	position: absolute;
 	left: 30px;
 	top: 0;
@@ -570,12 +570,12 @@
     content: "원";
 }
 
-#product > .view > .info > .summary > .button {
+#product > .view > .info > .summary > form > .button {
     overflow: hidden;
     margin-top: 16px;
 }
 
-#product > .view > .info > .summary > .button > input {
+#product > .view > .info > .summary > form > .button > input {
     float: left;
     width: 49%;
     height: 50px;
@@ -585,12 +585,12 @@
     border-radius: 2px;
     cursor: pointer;
 }
-#product > .view > .info > .summary > .button > .cart {
+#product > .view > .info > .summary > form > .button > .cart {
     background: #fff;
     border: 1px solid #d9d9d9;
     color: #233549;
 }
-#product > .view > .info > .summary > .button > .order {
+#product > .view > .info > .summary > form > .button > .order {
     background: #2e8de5;
     border: 1px solid #217fd7;
     color: #fff;
