--- a/src/main/resources/templates/product/productView.html
+++ b/src/main/resources/templates/product/productView.html
@@ -6,13 +6,13 @@
 		
  <script th:inline="javascript">
     $(function(){
-	let num = parseInt($("input[name='num']").val());
+	let num = parseInt($("input[name='count']").val());
 	let price1 = "[[${dto.price - ((dto.price * dto.discount)/100)}]]";
 	
 	let totalprice = 0;
 	$('.increase').click(function(){
 		num = num+1;
-		$("input[name='num']").val(num);
+		$("input[name='count']").val(num);
 		updatePrice();
 		console.log("num"+num);
 	});
@@ -20,7 +20,7 @@
 	$('.decrease').click(function(){
 		if(num > 1){
 			num = num-1;
-			$("input[name='num']").val(num);
+			$("input[name='count']").val(num);
 			updatePrice();
 				
 		}
@@ -29,12 +29,48 @@
 	
 	});
 	
+	$('.cart').click(function(e){
+		e.preventDefault();
+		
+		
+	    var result = confirm("장바구니에 담으시겠습니까?");
+			if (result === true) {
+			    // 확인 버튼이 클릭된 경우
+				 $('.buy').submit();
+			} else {
+			    // 취소 버튼이 클릭된 경우
+			}	
+		  
+	})
+	$('.order').click(function(e){
+		e.preventDefault();
+		
+		var userSession = sessionStorage.getItem("memberdto");
+	    var result = confirm("구매하시겠습니까?");
+			if (result === true) {
+				var input = $("<input>")
+			    .attr("type", "hidden")
+			    .attr("name", "buytype")
+			    .val("buytype");
+				$('.order').append(input);
+
+			    // 확인 버튼이 클릭된 경우
+				 $('.buy').attr('action', 'productOrder');
+				 $('.buy').submit();
+			} else {
+			    // 취소 버튼이 클릭된 경우
+			}	
+		  
+	})
+	
 	function updatePrice(){
 		totalprice =  price1 * num;
 		$('.totalPrice').text(totalprice.toLocaleString());
 		$('.tot').val(totalprice);
 		console.log("totprice"+totalprice);
 	}
+	
+	
 });
 
 </script>
@@ -92,7 +128,7 @@
                         
                         <div class="count">
                             <button class="decrease">-</button>
-                            <input type="text" name="num" value="1"/>
+                            <input type="text" name="count" value="1"/>
                             <button class="increase">+</button>
                         </div>
                         
@@ -101,14 +137,23 @@
                             <input type="hidden" class="tot" name="totalPrice" th:value="${dto.price - ((dto.price * dto.discount)/100)}"
                             <em>총 상품금액</em>
                         </div>
-
+						<form th:action="@{/product/productCart}" class="buy" method="post">
                         <div class="button">
-                            <input type="button" class="cart"  value="장바구니"/>
-                            <input type="button" class="order" value="구매하기"/>
+                            <input type="submit" class="cart"  value="장바구니"/>
+                            <input type="submit" class="order" value="구매하기"/>
                         </div>
+                        <input type="hidden" name="count" value="1"/>
+                        <input type="hidden" name="delivery" th:value="${dto.delivery}"/>
+                        <input type="hidden" name="discount" th:value="${dto.discount}"/>
+                        <input type="hidden" name="point" th:value="${dto.point}"/>
+                        <input type="hidden" name="price" th:value="${dto.price}"/>
+                        <input type="hidden" name="prodNo" th:value="${dto.prodNo}"/>
+                        <input type="hidden" name="tot" th:value="${dto.price}"/>
+                        <input type="hidden" name="uid" value="seller1"/>
+                        </form>
                     </div>
                 </article>
-
+				
                 <!-- 상품 정보 내용 -->
                 <article class="detail">
                     <nav>
