--- a/src/main/resources/templates/side.html
+++ b/src/main/resources/templates/side.html
@@ -110,39 +110,31 @@
             
             
         </main>
-        <footer>
-            <ul>
-                <li><a href="#">회사소개</a></li>
-                <li><a href="#">서비스이용약관</a></li>
-                <li><a href="#">개인정보처리방침</a></li>
-                <li><a href="#">전자금융거래약관</a></li>
-            </ul>
-            <div>
-                <p><img src="../images/footer_logo.png" alt="로고"></p>
-                <p>
-                    <strong>(주)KMARKET</strong>
-                    <br>
-                     부산시 강남구 테헤란로 152 (역삼동 강남파이낸스센터)
-                    <br>
-                     대표이사 : 홍길동
-                    <br>
-                    사업자등록번호 : 220-81-83676 사업자정보확인
-                    <br>
-                    통신판매업신고 : 강남 10630호 Fax : 02-589-8842
-                </p>
-                <p>
-                    <strong>고객센터</strong>
-                    <br>
-                     Tel : 1234-5678 (평일 09:00~18:00)
-                    <br>
-                    스마일클럽/SVIP 전용 : 1522-5700 (365일 09:00~18:00)
-                    <br>
-                    경기도 부천시 원미구 부일로 223(상동) 투나빌딩 6층
-                    <br>
-                    Fax : 051-123-4567 | Mail : kmarket@kmarket.co.kr
-                </p>
-            </div>
-        </footer>
+         <footer>
+        <ul>
+          <li><a href="#">회사소개</a></li>
+          <li><a href="#">서비스이용약관</a></li>
+          <li><a href="#">개인정보처리방침</a></li>
+          <li><a href="#">전자금융거래약관</a></li>
+        </ul>
+        <div>
+          <p><img src="./images/footer_logo.png" alt="로고"></p>
+          <p>
+            <strong>(주)롯데ON</strong><br>
+            서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br>
+            대표이사 : 김사무엘상현, 정준호, 강성현<br>
+            사업자등록번호 : 529-85-00774(롯데쇼핑(주) e커머스사업부)<br>
+            통신판매업 신고 : 서울송파 제0158호<br>
+            호스팅 서비스사업자 : 롯데쇼핑(주) e커머스사업부
+          </p>
+          <p>
+            <strong>고객센터</strong><br>
+            Tel : 1899-7000(유료) (평일 09:00~18:00)<br>
+            Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br>
+            App Version:LotteON-0.0.2-SNAPSHOH
+          </p>
+        </div>
+      </footer>
         <button type="button" id="top">상단이동</button>
     </div>
 </body>
