--- a/src/main/resources/templates/cs/index.html
+++ b/src/main/resources/templates/cs/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/Cs_style.css" />
+    <link rel="stylesheet" th:href="@{/css/Cs_style.css}"/>
     <title>케이마켓 고객센터</title>
 </head>
 <body>
@@ -23,10 +23,10 @@
             </div>
             <div class="logo">
                 <div>
-                    <a href="#">
+                    <a th:href="@{/cs/index}">
                         <img src="../images/logo.png" alt="Kmarket">고객센터
                     </a>
-                </div>
+                </div>		
             </div>
         </header>
         <section id="cs">
@@ -35,7 +35,7 @@
                     <strong>케이마켓</strong>이 도와드릴게요!
                 </h1>
                 <section class="notice">
-                    <h1>공지사항<a th:href="@{/cs/notice}">전체보기</a></h1>
+                    <h1>공지사항<a th:href="@{/cs/list(group=1,cate=0)}">전체보기</a></h1>
                     <ul>
                         <li>
                             <a href="#" class="title">[안내] 해외결제 사칭 문자 주의</a>
@@ -60,7 +60,7 @@
                     </ul>
                 </section>
                 <section class="faq">
-                    <h1>자주 묻는 질문<a th:href="@{/cs/faq}">전체보기</a></h1>
+                    <h1>자주 묻는 질문<a th:href="@{/cs/faq(group=2,cate1=1)}">전체보기</a></h1>
                     <ol>
                         <li>
                             <a href="#">
@@ -100,7 +100,7 @@
                     </ol>
                 </section>
                 <section class="qna">
-                    <h1>문의하기<a th:href="@{/cs/qna}">전체 보기</a></h1>
+                    <h1>문의하기<a th:href="@{/cs/qna(group=3,cate1=1)}">전체 보기</a></h1>
                     <ul>
                         <li>
                             <a href="#" class="title">[회원] 개인회원과 법인회원에 차이가 있나요?</a>
