--- a/src/main/resources/templates/cs/board/moduleList.html
+++ b/src/main/resources/templates/cs/board/moduleList.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>케이마켓 고객센터</title>
-    <link rel="stylesheet" href="/css/Cs_style.css" />
+    <link rel="stylesheet" th:href="@{/css/Cs_style.css}"/>
 </head>
 <body>
     <div id="container">
@@ -22,7 +22,7 @@
           </div>
           <div class="logo">
             <div>
-              <a href="../index.html"><img src="../../images/logo.png" alt="로고" />고객센터</a>
+              <a th:href="@{/cs/index}"><img th:src="@{/images/logo.png}" alt="로고" />고객센터</a>
             </div>
           </div>
         </header>
@@ -34,44 +34,21 @@
                 <p>홈<span>></span>공지사항</p>
               </div>
             </nav>
-            <section class="view">
+            <section class="list">
               <aside>
                 <h2>공지사항</h2>
                 <ul>
-                  <li class="on"><a href="#">전체</a></li>
-                  <li><a href="#">고객서비스</a></li>
-                  <li><a href="#">안전거래</a></li>
-                  <li><a href="#">위해상품</a></li>
-                  <li><a href="#">이벤트당첨</a></li>
-                </ul>
+					<li th:class="${pageResponseDTO.cate1 == 0} ? 'on' : ''"><a th:href="@{/cs/list(group=1,cate1=0)}">전체</a></li>
+					<li th:class="${pageResponseDTO.cate1 == 1} ? 'on' : ''"><a th:href="@{/cs/list(group=1,cate1=1)}">고객서비스</a></li>
+					<li th:class="${pageResponseDTO.cate1 == 2} ? 'on' : ''"><a th:href="@{/cs/list(group=1,cate1=2)}">안전거래</a></li>
+					<li th:class="${pageResponseDTO.cate1 == 3} ? 'on' : ''"><a th:href="@{/cs/list(group=1,cate1=3)}">위해상품</a></li>
+					<li th:class="${pageResponseDTO.cate1 == 4} ? 'on' : ''"><a th:href="@{/cs/list(group=1,cate1=4)}">이벤트당첨</a></li>
+				</ul>
               </aside>
-              <article>
-                <nav>
-                  <h2 class="title">[안내] 해외결제 사칭 문자 주의</h2>
-                  <span class="date">2022.11.20</span>
-                </nav>
-  
-                <div class="content">
-                  <p>
-                    안녕하세요. G마켓입니다.<br />
-                    G마켓 해외직구를 사칭하는 피싱 문자가 최근 다시 신고되고 있어
-                    주의 안내드립니다.<br />
-                    아래와 같이 G마켓 해외직구 승인결제 피싱 문자 또는 발신번호
-                    006, 002 등으로 시작하는 피싱 문자를 수신하신 고객님께서는
-                    통화 또는 문자 내 기재된 번호/링크 등을 클릭하지 않도록
-                    주의하여 주시기 바랍니다.<br /><br />
-                  </p>
-                  <p>
-                    ※ 피싱 관련 피해신고<br /><br />
-                    ▶ 경찰청 사이버수사국 (국번없이)182 :
-                    http://cyberbureau.police.go.kr<br />
-                    ▶ KISA 인터넷침해대응센터 (국번없이)118 :
-                    http://www.krcert.or.kr<br />
-                    감사합니다.<br />
-                  </p>
-                </div>
-                <a href="./list.html" class="btnList">목록보기</a>
-              </article>
+              
+              <article layout:fragment="content"></article>
+              
+              
             </section>
           </div>
         </section>
@@ -101,6 +78,6 @@
             </p>
           </div>
         </footer>
-      </div>
+    </div>
 </body>
 </html>
