--- a/src/main/resources/templates/cs/notice/noticeView.html
+++ b/src/main/resources/templates/cs/notice/noticeView.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>케이마켓 고객센터</title>
-    <link rel="stylesheet" href="/css/Cs_style.css" />
+    <link rel="stylesheet" th:href="@{/css/Cs_style.css}" />
 </head>
 <body>
     <div id="container">
