--- a/src/main/resources/templates/cs/qna/qnaView.html
+++ b/src/main/resources/templates/cs/qna/qnaView.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>케이마켓 고객센터</title>
     <link rel="shortcut icon" type="image/x-icon" href="../../img/favicon.ico" />
-    <link rel="stylesheet" href="/css/Cs_style.css" />
+    <link rel="stylesheet" th:href="@{/css/Cs_style.css}" />
   </head>
   <body>
     <div id="wrapper">
@@ -22,7 +22,7 @@
         </div>
         <div class="logo">
           <div>
-            <a href="../index.html"><img src="../../images/logo.png" alt="로고" />고객센터</a>
+            <a href="../index.html"><img th:src="@{/images/logo.png}" alt="로고" />고객센터</a>
           </div>
         </div>
       </header>
