--- a/src/main/resources/templates/side.html
+++ b/src/main/resources/templates/side.html
@@ -22,7 +22,7 @@
         <header>
             <div class="top">
                 <div>
-                    <a href="#">로그인</a>
+                    <a th:href="@{/member/login}">로그인</a>
                     <a href="#">회원가입</a>
                     <a href="#">마이페이지</a>
                     <a href="#">
