--- a/src/main/resources/templates/product/productCart.html
+++ b/src/main/resources/templates/product/productCart.html
@@ -140,7 +140,7 @@
                         <article>
                           <a href="#"><img src="https://via.placeholder.com/80x80" alt=""></a>
                           <div>
-                            <h2><a href="#"></a></h2>
+                            <h2><a href="#">[[${dto.prodNo}]]</a></h2>
                             <p>상품설명</p>
                           </div>
                         </article>
