--- a/src/main/resources/templates/cs/index.html
+++ b/src/main/resources/templates/cs/index.html
@@ -60,7 +60,7 @@
                     </ul>
                 </section>
                 <section class="faq">
-                    <h1>자주 묻는 질문<a th:href="@{/cs/faq}">전체보기</a></h1>
+                    <h1>자주 묻는 질문<a th:href="@{/cs/list(group=2,cate=1)}">전체보기</a></h1>
                     <ol>
                         <li>
                             <a href="#">
