--- a/src/main/resources/templates/cs/board/faqView.html
+++ b/src/main/resources/templates/cs/board/faqView.html
@@ -2,25 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.thymeleaf.org/"
       layout:decorate="/cs/board/moduleList.html">
-		
+
+ 
              <article layout:fragment="content">
-			  <nav>
-                <h2 class="title">[가입] [[${article.title}]]</h2>                
-                <p>
-                  <span>[[${article.uid}]]</span>
-                  <span>[[${article.rdate}]]</span>
-                </p>
-              </nav>	 
+               <nav>
+                <h2 class="title"><span>Q.</span> [[${article.title}]]</h2>                
+              </nav>
 
               <div class="content">
-				  
-				 [[${article.content}]]<br><br>  
-				  
                 <p>
                   개인회원에서 법인회원(사업자 회원)으로 전환은 불가하므로 법인회원(사업자 회원) 전환은 신규 가입으로 진행을 해야 합니다.
                 </p>
                 <p>
-                  ※ 피싱 관련 피해신고<br /><br/>
+                  ※ 피싱 관련 피해신고<br /><br />
                   ▶ 경찰청 사이버수사국 (국번없이)182 :
                   http://cyberbureau.police.go.kr<br />
                   ▶ KISA 인터넷침해대응센터 (국번없이)118 :
@@ -28,7 +22,7 @@
                   감사합니다.<br />
                 </p>
               </div>
-              <a th:href="@{/cs/list(group=${article.group},cate1=0)}" class="btnList">목록보기</a>
+              <a th:href="@{/cs/list(group=1,cate=0)}" class="btnList">목록보기</a>
             </article>
-      
+    
 </html>
