--- a/src/main/resources/templates/product/productCart.html
+++ b/src/main/resources/templates/product/productCart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,196 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <link rel="stylesheet" href="../css/style.css" />
+    
+    <script th:inline="javascript">
+		$(function(){
+			
+			let cartNo = null;
+		    let count = 0; // 상품 수 초기화
+		    let point = 0; // 포인트 초기화
+		    let total = 0; // total 변수를 초기화합니다.
+		    let delivery = 0; // 배송비 초기화
+		    let discountPrice = 0; // 전체비용 초기화
+			let orderdiscount = $('input.ordercount').val();
+		    var listValues = [];
+		    initialize();
+	    	
+	    	function initialize() {
+	        $('.ordernodiscount').text("0");
+	        $('.orderdiscount').text("0");
+	        $('.ordercount').text("0");
+	        $('.orderpoint').text("0");
+	        $('.orderdelivery').text("0");
+	        $('.ordertotal').text("0");
+	        $('.ordertotal2').val("0");
+	    	}
+	    	
+			 $('#all').click(function() {
+	        // 전체 선택 체크박스의 상태
+	        var isChecked = $(this).prop('checked');
+   			
+	  	 	 $('.Item').prop('checked', isChecked);
+	
+	   		
+	        // 개별 체크박스들의 상태를 전체 선택 체크박스와 동일하게 설정
+	  	   
+		        if($('.Item:checked').length === 0){
+		        	 initialize();
+		        }
+		        else{
+		        	calculateSelectedItems(); // 업데이트된 선택 항목 계산	
+		        }
+		        
+		       
+	 	   });
+	    
+	     
+		         $('.Item').click(function() {
+		        // 개별 체크박스들 중에서 하나라도 선택 해제된 것이 있는지 확인
+		        cartNo = $(this).val();
+		        console.log("cartNo = " + cartNo);
+		        if ($('.Item:checked').length < $('.Item').length) {
+		            // 하나라도 선택 해제된 경우, 전체 선택 체크박스도 선택 해제
+		            $('#all').prop('checked', false);
+		        } else {
+		            // 모두 선택된 경우, 전체 선택 체크박스도 선택
+		            $('#all').prop('checked', true);
+		        }
+		        
+		        if($('.Item:checked').length === 0){
+		        	 initialize();
+		        }
+		        else{
+		        	calculateSelectedItems(); // 업데이트된 선택 항목 계산	
+		        }
+	        
+	   		 });
+		
+			    //할인금액계산
+	    function calculateSelectedItems() {
+	        var selectedItems = $('.Item:checked'); // 선택된 체크박스 아이템들을 가져옵니다.
+	        count = selectedItems.length; // 선택된 상품 수 업데이트
+	        total = 0; // 총 상품금액 초기화
+	        var discount = 0; // 할인 총액 초기화
+	        var selectedCheckbox = $(this); // 선택된 체크박스
+	        var listCountValue = null;
+	      
+	        var listdeliveryValue = null;
+	        var listpriceValue = null;
+	        var listLastPriceValue = null;
+	        var listNoDiscountPriceValue = null;
+	        var listdiscountedPrice = null;
+	        var listpointValue = null;
+	        var listdiscountper = null;
+	        
+	        var listValues = [];
+	        selectedItems.each(function() {
+	            var row = $(this).closest('tr'); // 선택된 체크박스가 속한 행
+	            var listCount = parseFloat(row.find('.listcount').val());  // 선택된 체크박스의 .listcount 값
+	            var listpriceValue = parseFloat(row.find('.listprice').val());  // 선택된 체크박스의 .listprice 값
+	            var listdiscountValue = parseFloat(row.find('.listdiscount').val());  // 선택된 체크박스의 .listcount 값
+	            var listProdNo = parseFloat(row.find('.listprodNo').val());  // 선택된 체크박스의 .listprodNo 값
+	            var listUid = $('.listuid').val(); // 선택된 체크박스의 .listcount 값을 더합니다.
+	            var listdelivery = parseFloat(row.find('.listdelivery').val());  // 선택된 체크박스의 .listdelivery 값
+	            var listpName = parseFloat(row.find('.listpName').val());  // 선택된 체크박스의 .listpName 값
+	            var listtotal = parseFloat(row.find('.listtotal').val());  // 선택된 체크박스의 .listtotal 값
+	            var listpoint = parseFloat(row.find('.listpoint').val());  // 선택된 체크박스의 .listpoint 값
+	            var cartNo = $('.cartNo').val();
+	            var cartNo = $('.cartNo').val();
+	            
+	            console.log("listProdNo = " + listProdNo);
+	            console.log("listUid = " + listUid);
+	            console.log("listCount = " + listCount);
+	            console.log("listpriceValue = " + listpriceValue);
+	            console.log("listProdNo = " + listProdNo);
+	            console.log("listtotal = " + listtotal);
+	            console.log("listdelivery = " + listdelivery);
+	            console.log("listpoint = " + listpoint);
+	            console.log("cartNo = " + cartNo);
+	            
+	            
+	            listValues.push({
+	                listCount: listCount,
+	                listpriceValue: listpriceValue,
+	                listdiscountValue: listdiscountValue,
+	                listProdNo: listProdNo,
+	                listUid: listUid,
+	                listdelivery: listdelivery,
+	                listtotal: listtotal,
+	                listpoint: listpoint,
+	                cartNo: cartNo,
+	                orderdiscount:Math.round(orderdiscount)
+	               
+	            });
+	          
+	            
+	            $('.jsondata').val(JSON.stringify(listValues));
+	            console.log("$('.jsondata') = " + $('.jsondata').val());
+	            
+	           //데이터 값 저장
+	            listdeliveryValue += parseFloat(row.find('.listdelivery').val());  // 선택된 체크박스의 .listdelivery 값을 더합니다.
+	            listpointValue += parseFloat(row.find('.listpoint').val());  // 선택된 체크박스의 .listpoint 값을 더합니다.
+	        	listCountValue += parseFloat(row.find('.listcount').val());  // 선택된 체크박스의 .listcount 값을 더합니다.
+	        	listLastPriceValue = listCount * listpriceValue;
+	        	listNoDiscountPriceValue += listLastPriceValue;
+	        	
+	        	
+	        	
+	            // 할인 적용된 가격 계산
+	            var discountedPrice = listLastPriceValue - (listLastPriceValue * (listdiscountValue / 100));
+	            var discountper = (listLastPriceValue * (listdiscountValue / 100));
+	            //할인후 적용 금액
+	            listdiscountedPrice += discountedPrice;
+	            //할인금액
+	            listdiscountper += discountper;
+	            console.log('discountedPrice value: ' + Math.round(discountedPrice).toLocaleString());
+	            
+	            console.log('discountedPrice value: ' + Math.round(listdiscountedPrice).toLocaleString());
+	        });
+	     
+	        // 업데이트된 값들을 화면에 표시
+	        $('.ordernodiscount').text(listNoDiscountPriceValue.toLocaleString());
+	        
+	        $('.orderdiscount').text('- ' + Math.round(listdiscountper).toLocaleString());
+	        // 업데이트된 상품 수량을 화면에 표시
+	        $('.ordercount').text(listCountValue.toLocaleString());
+	        $('.orderpoint').text(listpointValue.toLocaleString());
+	        $('.orderdelivery').text(listdeliveryValue.toLocaleString());
+	        $('.ordertotal').text(Math.round(listdiscountedPrice).toLocaleString());
+	        $('.ordertotal2').val(Math.round(listdiscountedPrice).toLocaleString());
+	    }
+		
+		
+	 $('#deleteSelected').click(function() {
+  	 	 var selectedItems = $('.Item:checked'); // 선택된 체크박스 아이템들을 가져옵니다.
+  	 	 console.log("selectedItems"+selectedItems);
+         var cartNos = selectedItems.map(function() {
+            return $(this).val(); // 선택된 아이템의 data-cartno 속성 값을 가져옵니다.
+         }).get();
+  	  
+	  	  console.log("cartNos"+cartNos);
+	      $('.Item:checked').closest('tr').remove();
+	      
+		      	$.ajax({
+						url:'/product/cart/${cartNos}',
+						type:'delete',
+						traditional : true,
+						contentType: "application/x-www-form-urlencoded; charset=UTF-8",
+						dataType:'json',
+						success:function(data){
+							console.log(data);
+							console.log(data.result);
+							if(data.result > 0){}
+								
+						}
+					
+				});
+    });
+			
+		});
+		
+		
+	</script>
 </head>
 <style>
 
@@ -120,7 +310,7 @@
                 <table>
                   <thead>
                     <tr>
-                      <th><input type="checkbox" name="all"></th>
+                      <th><input type="checkbox" id="all"name="all"></th>
                       <th>상품명</th>
                       <th>총수량</th>
                       <th>판매가</th>
@@ -134,59 +324,74 @@
                     <tr class="empty">
                       <td colspan="7">장바구니에 상품이 없습니다.</td>
                     </tr>
-                    <tr>
-                      <td><input type="checkbox" name=""></td>
+                    <tr th:each="dto:${dto}">
+                      <td><input type="checkbox" class="Item" th:value="${dto.cartNo}"></td>
                       <td>
                         <article>
-                          <a href="#"><img src="https://via.placeholder.com/80x80" alt=""></a>
+                          <a href="#"><img th:src="@{/images/product/}+${dto.prodNo.thumb1}" alt=""></a>
                           <div>
-                            <h2><a href="#"></a></h2>
-                            <p>상품설명</p>
+                            <h2><a href="#">[[${dto.prodNo.prodName}]]</a></h2>
+                            <p>[[${dto.prodNo.descript}]]</p>
                           </div>
                         </article>
                       </td>
-                      <td>1</td>
-                      <td>27,000</td>
-                      <td>5%</td>
-                      <td>270</td>
-                      <td>무료배송</td>
-                      <td>27,000</td>
+                      <td>[[${dto.count}]]</td>
+                      <td>[[${#numbers.formatInteger(dto.price,0,'COMMA')}]]</td>
+                      <td>[[${dto.discount}]]%</td>
+                      <td>[[${dto.point}]]</td>
+                      <td>[[${dto.delivery}]]</td>
+                      <td>[[${#numbers.formatInteger(dto.count * dto.price,0,'COMMA')}]]</td>
+                      <td><input type="hidden" class="listpoint" th:value="${dto.point}"/> </td>
+		              <td><input type="hidden" class="listcount" th:value="${dto.count}"/> </td>
+		              <td><input type="hidden" class="listprice" th:value="${dto.price}"/> </td>
+		              <td><input type="hidden" class="listdelivery" th:value="${dto.delivery}"/> </td>
+		              <td><input type="hidden" class="listtotal" th:value="${dto.count * dto.price  - ((dto.count * dto.price) * (dto.discount / 100))}"/> </td>
+		              <td><input type="hidden" class="listdiscount" th:value="${dto.discount}"/></td>
+		              <td><input type="hidden" class="listdiscript" th:value="${dto.prodNo.descript}"/></td>
+		              <td><input type="hidden" class="listpoint" th:value="${dto.point}"/></td>
+		              <td><input type="hidden" class="listprodNo" th:value="${dto.prodNo.prodNo}"/></td>
+		              <td><input type="hidden" class="listpName" th:value="${dto.prodNo.prodName}"/></td>
+		              <td><input type="hidden" class="listuid" value="seller1"/></td>
+		              <td><input type="hidden" class="cartNo" th:value="${dto.cartNo}"/></td>
                     </tr>
                    
                     
                   </tbody>
                 </table>
-                <input type="button" name="del" value="선택삭제">
+                <input type="button" id="deleteSelected" name="del" value="선택삭제">
 
                 <!-- 장바구니 전체합계 -->
                 <div class="total">
                   <h2>전체합계</h2>
                   <table border="0">
                     <tr>
-                      <td>상품수</td>
-                      <td>1</td>
-                    </tr>
-                    <tr>
-                      <td>상품금액</td>
-                      <td>27,000</td>
-                    </tr>
-                    <tr>
-                      <td>할인금액</td>
-                      <td>-1,000</td>
-                    </tr>
-                    <tr>
-                      <td>배송비</td>
-                      <td>0</td>
-                    </tr>              
-                    <tr>
-                      <td>포인트</td>
-                      <td>260</td>
-                    </tr>
-                    <tr>
-                      <td>전체주문금액</td>
-                      <td>26,000</td>
-                    </tr>
+	              <td>상품수</td>
+	              <td class="ordercount">0</td>
+	            </tr>
+	            <tr>
+	              <td>상품금액</td>
+	              <td class="ordernodiscount">0</td>
+	            </tr>
+	            <tr>
+	              <td>할인금액</td>
+	              <td class="orderdiscount">0</td>
+	            </tr>
+	            <tr>
+	              <td>배송비</td>
+	              <td class="orderdelivery">0</td>
+	            </tr>              
+	            <tr>
+	              <td>포인트</td>
+	              <td class="orderpoint">0</td>
+	            </tr>
+	            <tr>
+	              <td>전체주문금액</td>
+	              <td class="ordertotal">0</td>
+	            </tr>
                   </table>
+                   <input type="hidden" class="jsondata" name="jsonData"/>
+         		   <input type="hidden" class="orderdiscount" name="orderdiscount"/>
+         		   <input type="hidden" class="ordertotal2"/>
                   <input type="submit" name="" value="주문하기">    
                 </div>
               </form>
